fix: Highlight css animation is not showing after refactoring the displaying of comments at post detail

--- a/src/app/pages/post-detail/post-detail.css
+++ b/src/app/pages/post-detail/post-detail.css
@@ -6,20 +6,6 @@
   animation: fadeOut 0.2s ease-in-out;
 }
 
-.highlight {
-  animation: highlight-blink 0.5s ease-in-out 3;
-}
-
-@keyframes highlight-blink {
-  0%,
-  100% {
-    background-color: transparent;
-  }
-  50% {
-    background-color: rgba(255, 255, 255, 0.2);
-  }
-}
-
 @keyframes fadeIn {
   from {
     opacity: 0;
